Wed Dec  2 09:05:57 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/ndds/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/ndds/DDS_State_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/ndds/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_TopicBase_Connector_T.h:
        * connectors/dds4ccm/impl/ndds/PublisherListener_T.h:
        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.h:
          Moved publisher and subscriber to the DDS_TopicBase

Wed Dec  2 08:33:57 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Added reader test to the test framework.

Wed Dec  2 08:28:44 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
          Started with read_one_last.

        * connectors/dds4ccm/tests/Reader:
        * connectors/dds4ccm/tests/Reader/Base:
        * connectors/dds4ccm/tests/Reader/Base/Reader_Starter.idl:
        * connectors/dds4ccm/tests/Reader/Base/Reader_Starter.mpc:
        * connectors/dds4ccm/tests/Reader/Base/Reader_Test_Base.idl:
        * connectors/dds4ccm/tests/Reader/Base/Reader_Test_Base.mpc:
        * connectors/dds4ccm/tests/Reader/Connector:
        * connectors/dds4ccm/tests/Reader/Connector/Reader_Test_Connector.idl:
        * connectors/dds4ccm/tests/Reader/Connector/Reader_Test_Connector.mpc:
        * connectors/dds4ccm/tests/Reader/Connector/Reader_Test_Connector_exec.h:
        * connectors/dds4ccm/tests/Reader/Connector/Reader_Test_Connector_exec.cpp:
        * connectors/dds4ccm/tests/Reader/README:
        * connectors/dds4ccm/tests/Reader/Receiver: